--- a/src/playground/index.ejs
+++ b/src/playground/index.ejs
@@ -6,6 +6,9 @@
     <meta name="google" value="notranslate">
     <link rel="shortcut icon" href="static/favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script src='https://cdn.jsdelivr.net/npm/react@16.9.0/umd/react.development.js'></script>
+    <script src='https://cdn.jsdelivr.net/npm/react-dom@16.9.0/umd/react-dom.development.js'></script>
+    <script src='./scratch-vm.min.js'></script>
     <% if (htmlWebpackPlugin.options.sentryConfig) { %>
         <!-- Sentry error logging to help with finding bugs -->
         <script src="https://cdn.ravenjs.com/3.22.1/raven.min.js" crossorigin="anonymous"></script>
