--- a/src/components/sprite-selector/sprite-selector.css
+++ b/src/components/sprite-selector/sprite-selector.css
@@ -16,6 +16,20 @@
     border-bottom: 0;
 }
 
+.sprite-selector-scratch2 {
+    flex-grow: 1;
+    position: relative;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    margin-left: calc($space / 2);
+    background-color: $ui-secondary;
+    border-top-right-radius: $space;
+    border-top-left-radius: $space;
+    border-color: $ui-black-transparent;
+    border-width: 1px;
+    border-style: solid;
+    border-bottom: 0;
+}
+
 .sprite-wrapper {
     /*
         Our goal is to fit sprites evenly in a row without leftover space.
