--- a/src/components/menu-bar/author-info.css
+++ b/src/components/menu-bar/author-info.css
@@ -34,6 +34,12 @@
     white-space: nowrap;
 }
 
-.username {
+/* .username {
     font-weight: bold;
+} */
+
+.username  {
+    color: $ui-white;
+    font-weight: bold;
+    text-decoration: none;
 }
