--- a/src/playground/index.ejs
+++ b/src/playground/index.ejs
@@ -13,6 +13,9 @@
     <script>
       window.scratchExt = {
         axios: axios,
+        alert: {
+            warn: alert
+        },
         loading: {
           start: () => {},
           end: () =>{}
@@ -24,7 +27,7 @@
       body,
       .app {
           /* probably unecessary, transitional until layout is refactored */
-          width: 100%; 
+          width: 100%;
           height: 100%;
           margin: 0;
 
@@ -54,7 +57,7 @@
     appTarget.className = 'app';
     document.body.appendChild(appTarget);
     ReactDOM.render(
-      React.createElement(WrappedGui,{
+      React.createElement(window.WrappedGui||WrappedPlayer,{
         autoSaveIntervalSecs: 0,
         canEditTitle: true,
         backpackVisible: true,
